Import of CDENT/Kwiki-Soap-0.04 from CPAN.
gitpan-cpan-distribution: Kwiki-Soap
gitpan-cpan-version:      0.04
gitpan-cpan-path:         CDENT/Kwiki/Kwiki-Soap-0.04.tar.gz
gitpan-cpan-author:       CDENT
gitpan-cpan-maturity:     released

--- a/TODO
+++ b/TODO
@@ -2,10 +2,8 @@
 * Configuration through preferences and wiki configuration, rather
   than code
 
-* Caching
+* Caching?
 
-* Error handling
-
-* Raising template handling into the base class
+* Improved Error handling
 
 * Tests which actually test, rather than skipping because of templates
